lib/gift-parser-globals.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */
(function(root) {
  "use strict";

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  peg$SyntaxError.buildMessage = function(expected, found) {
    var DESCRIBE_EXPECTATION_FNS = {
          literal: function(expectation) {
            return "\"" + literalEscape(expectation.text) + "\"";
          },

          "class": function(expectation) {
            var escapedParts = "",
                i;

            for (i = 0; i < expectation.parts.length; i++) {
              escapedParts += expectation.parts[i] instanceof Array
                ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
                : classEscape(expectation.parts[i]);
            }

            return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
          },

          any: function(expectation) {
            return "any character";
          },

          end: function(expectation) {
            return "end of input";
          },

          other: function(expectation) {
            return expectation.description;
          }
        };

    function hex(ch) {
      return ch.charCodeAt(0).toString(16).toUpperCase();
    }

    function literalEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/"/g,  '\\"')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function classEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/\]/g, '\\]')
        .replace(/\^/g, '\\^')
        .replace(/-/g,  '\\-')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      var descriptions = new Array(expected.length),
          i, j;

      for (i = 0; i < expected.length; i++) {
        descriptions[i] = describeExpectation(expected[i]);
      }

      descriptions.sort();

      if (descriptions.length > 0) {
        for (i = 1, j = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  };

  function peg$parse(input, options) {
    options = options !== void 0 ? options : {};

    var peg$FAILED = {},

        peg$startRuleFunctions = { GIFTQuestions: peg$parseGIFTQuestions },
        peg$startRuleFunction  = peg$parseGIFTQuestions,

        peg$c0 = function(questions) { return questions; },
        peg$c1 = peg$otherExpectation("Category"),
        peg$c2 = "$",
        peg$c3 = peg$literalExpectation("$", false),
        peg$c4 = "CATEGORY:",
        peg$c5 = peg$literalExpectation("CATEGORY:", false),
        peg$c6 = function(cat) {return {type:"Category", title:cat}},
        peg$c7 = peg$otherExpectation("Description"),
        peg$c8 = function(title, text) { resetLastQuestionTextFormat(); return {type:"Description", title:title, stem:text, hasEmbeddedAnswers:false} },
        peg$c9 = "{",
        peg$c10 = peg$literalExpectation("{", false),
        peg$c11 = "}",
        peg$c12 = peg$literalExpectation("}", false),
        peg$c13 = function(title, stem1, answers, stem2) {
            
            var embedded = (stem2 !== null);    
            var stem1Text = stem1 ? (stem1.text + (embedded ? " " : "")) : "";

            var format = (stem1 && stem1.format) || (stem2 && stem2.format) || "moodle";
            var text = stem1Text + ( embedded ? "_____ " + stem2.text : "");
            
            var question = {type:answers.type, title:title, stem: {format: format, text: text}, hasEmbeddedAnswers:embedded};
            question = processAnswers(question, answers);
            resetLastQuestionTextFormat();
            return question;
          },
        peg$c14 = peg$otherExpectation("{= match1 -> Match1\n...}"),
        peg$c15 = function(matchPairs, globalFeedback) { return { type: "Matching", matchPairs:matchPairs, globalFeedback:globalFeedback }; },
        peg$c16 = peg$otherExpectation("matches"),
        peg$c17 = function(matchPairs) { return matchPairs },
        peg$c18 = peg$otherExpectation("match"),
        peg$c19 = "=",
        peg$c20 = peg$literalExpectation("=", false),
        peg$c21 = "->",
        peg$c22 = peg$literalExpectation("->", false),
        peg$c23 = function(left, right) { var matchPair = { 
                subquestion:{
                  format:(left !== null ? left.format : getLastQuestionTextFormat()), 
                  text:(left !== null ? left.text : "")
                }, 
                subanswer:right}; 
                return matchPair },
        peg$c24 = peg$otherExpectation("{T} or {F} or {True} or {False}"),
        peg$c25 = function(isTrue, feedback, globalFeedback) { return { type:"TF", isTrue: isTrue, feedback:feedback, globalFeedback:globalFeedback}; },
        peg$c26 = function(isTrue) { return isTrue },
        peg$c27 = "true",
        peg$c28 = peg$literalExpectation("TRUE", true),
        peg$c29 = "t",
        peg$c30 = peg$literalExpectation("T", true),
        peg$c31 = function() {return true},
        peg$c32 = "false",
        peg$c33 = peg$literalExpectation("FALSE", true),
        peg$c34 = "f",
        peg$c35 = peg$literalExpectation("F", true),
        peg$c36 = function() {return false},
        peg$c37 = peg$otherExpectation("{=correct choice ~incorrect choice ... }"),
        peg$c38 = function(choices, globalFeedback) { return { type: "MC", choices:choices, globalFeedback:globalFeedback}; },
        peg$c39 = peg$otherExpectation("Choices"),
        peg$c40 = function(choices) { return choices; },
        peg$c41 = peg$otherExpectation("Choice"),
        peg$c42 = /^[=~]/,
        peg$c43 = peg$classExpectation(["=", "~"], false, false),
        peg$c44 = function(choice, feedback) { var wt = choice[2];
              var txt = choice[4];
              var choice = { isCorrect: (choice[0] == '='), 
                             weight:wt, 
                             text: txt,
                             feedback:feedback };
              return choice },
        peg$c45 = peg$otherExpectation("(weight)"),
        peg$c46 = "%",
        peg$c47 = peg$literalExpectation("%", false),
        peg$c48 = /^[\-]/,
        peg$c49 = peg$classExpectation(["-"], false, false),
        peg$c50 = function(percent) { return parseFloat(percent.join('')) },
        peg$c51 = peg$otherExpectation("(percent)"),
        peg$c52 = "100",
        peg$c53 = peg$literalExpectation("100", false),
        peg$c54 = /^[0-9]/,
        peg$c55 = peg$classExpectation([["0", "9"]], false, false),
        peg$c56 = /^[.]/,
        peg$c57 = peg$classExpectation(["."], false, false),
        peg$c58 = function() { return text() },
        peg$c59 = peg$otherExpectation("(feedback)"),
        peg$c60 = "#",
        peg$c61 = peg$literalExpectation("#", false),
        peg$c62 = "###",
        peg$c63 = peg$literalExpectation("###", false),
        peg$c64 = function(feedback) { return feedback },
        peg$c65 = peg$otherExpectation("Essay question { ... }"),
        peg$c66 = "",
        peg$c67 = function(globalFeedback) { return { type: "Essay", globalFeedback:globalFeedback}; },
        peg$c68 = peg$otherExpectation("Single short answer { ... }"),
        peg$c69 = function(answer, feedback, globalFeedback) { var choices = [];
            choices.push({isCorrect:true, text:answer, feedback:feedback, weight:null});
            return { type: "Short", choices:choices, globalFeedback:globalFeedback}; },
        peg$c70 = peg$otherExpectation("{#... }"),
        peg$c71 = function(numericalAnswers, globalFeedback) { return { type:"Numerical", 
                     choices:numericalAnswers, 
                     globalFeedback:globalFeedback}; },
        peg$c72 = peg$otherExpectation("Numerical Answers"),
        peg$c73 = peg$otherExpectation("Multiple Numerical Choices"),
        peg$c74 = peg$otherExpectation("Numerical Choice"),
        peg$c75 = function(choice, feedback) { var symbol = choice[0];
              var wt = choice[1];
              var txt = choice[2];
              var choice = { isCorrect:(symbol == '='), 
                             weight:wt, 
                             text: (txt !== null ? txt : {format:getLastQuestionTextFormat(), text:'*'}), // Moodle unit tests show this, not in documentation
                             feedback: feedback }; 
              return choice },
        peg$c76 = peg$otherExpectation("Single numeric answer"),
        peg$c77 = peg$otherExpectation("(number with range)"),
        peg$c78 = ":",
        peg$c79 = peg$literalExpectation(":", false),
        peg$c80 = function(number, range) { var numericAnswer = {type: 'range', number: number, range:range}; return numericAnswer},
        peg$c81 = peg$otherExpectation("(number with high-low)"),
        peg$c82 = "..",
        peg$c83 = peg$literalExpectation("..", false),
        peg$c84 = function(numberLow, numberHigh) { var numericAnswer = {type: 'high-low', numberHigh: numberHigh, numberLow:numberLow}; return numericAnswer},
        peg$c85 = peg$otherExpectation("(number answer)"),
        peg$c86 = function(number) { var numericAnswer = {type: 'simple', number: number}; return numericAnswer},
        peg$c87 = peg$otherExpectation(":: Title ::"),
        peg$c88 = "::",
        peg$c89 = peg$literalExpectation("::", false),
        peg$c90 = function(title) { return title.join('') },
        peg$c91 = peg$otherExpectation("Question stem"),
        peg$c92 = function(stem) { setLastQuestionTextFormat(stem.format); // save format for question, for default of other non-formatted text
              return stem },
        peg$c93 = peg$otherExpectation("(blank line separator)"),
        peg$c94 = peg$otherExpectation("blank line"),
        peg$c95 = peg$otherExpectation("(Title text)"),
        peg$c96 = function(t) {return t},
        peg$c97 = peg$otherExpectation("(text character)"),
        peg$c98 = peg$otherExpectation("format"),
        peg$c99 = "[",
        peg$c100 = peg$literalExpectation("[", false),
        peg$c101 = "html",
        peg$c102 = peg$literalExpectation("html", false),
        peg$c103 = "markdown",
        peg$c104 = peg$literalExpectation("markdown", false),
        peg$c105 = "plain",
        peg$c106 = peg$literalExpectation("plain", false),
        peg$c107 = "moodle",
        peg$c108 = peg$literalExpectation("moodle", false),
        peg$c109 = "]",
        peg$c110 = peg$literalExpectation("]", false),
        peg$c111 = function(format) {return format},
        peg$c112 = peg$otherExpectation("(newline)"),
        peg$c113 = "\\n",
        peg$c114 = peg$literalExpectation("\\n", false),
        peg$c115 = function() {return '\n'},
        peg$c116 = peg$otherExpectation("(escape character)"),
        peg$c117 = "\\",
        peg$c118 = peg$literalExpectation("\\", false),
        peg$c119 = peg$otherExpectation("escape sequence"),
        peg$c120 = "~",
        peg$c121 = peg$literalExpectation("~", false),
        peg$c122 = function(sequence) { return sequence },
        peg$c123 = peg$otherExpectation(""),
        peg$c124 = peg$anyExpectation(),
        peg$c125 = function() {return text()},
        peg$c126 = peg$otherExpectation("(formatted text excluding '->'"),
        peg$c127 = function(format, txt) { return {
              format:(format!==null ? format : getLastQuestionTextFormat()), 
              text:((format !== "html") 
                  ? removeDuplicateSpaces(txt.join('').trim())
                  : txt.join('').replace(/\r\n/g,'\n'))}},
        peg$c128 = peg$otherExpectation("(formatted text)"),
        peg$c129 = function(format, txt) { return {
              format:(format!==null ? format : getLastQuestionTextFormat()), 
              text:((format !== "html") 
                 ? removeDuplicateSpaces(txt.join('').trim())
                 : txt.join('').replace(/\r\n/g,'\n'))}},
        peg$c130 = peg$otherExpectation("(unformatted text)"),
        peg$c131 = function(txt) { return removeNewLinesDuplicateSpaces(txt.join('').trim())},
        peg$c132 = peg$otherExpectation("(category text)"),
        peg$c133 = function(txt) { return txt.flat().join('') },
        peg$c134 = function(chars, frac) { return parseFloat(chars.join('') + frac); },
        peg$c135 = ".",
        peg$c136 = peg$literalExpectation(".", false),
        peg$c137 = function(chars) { return "." + chars.join(''); },
        peg$c138 = "####",
        peg$c139 = peg$literalExpectation("####", false),
        peg$c140 = function(rt) {return rt;},
        peg$c141 = peg$otherExpectation("(single line whitespace)"),
        peg$c142 = peg$otherExpectation("(multiple line whitespace)"),
        peg$c143 = peg$otherExpectation("(comment)"),
        peg$c144 = "//",
        peg$c145 = peg$literalExpectation("//", false),
        peg$c146 = function() {return null},
        peg$c147 = peg$otherExpectation("(space)"),
        peg$c148 = " ",
        peg$c149 = peg$literalExpectation(" ", false),
        peg$c150 = "\t",
        peg$c151 = peg$literalExpectation("\t", false),
        peg$c152 = peg$otherExpectation("(end of line)"),
        peg$c153 = "\r\n",
        peg$c154 = peg$literalExpectation("\r\n", false),
        peg$c155 = "\n",
        peg$c156 = peg$literalExpectation("\n", false),
        peg$c157 = "\r",
        peg$c158 = peg$literalExpectation("\r", false),
        peg$c159 = function() { return "EOF"; },

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1 }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildStructuredError(
        [peg$otherExpectation(description)],
        input.substring(peg$savedPos, peg$currPos),
        location
      );
    }

    function error(message, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildSimpleError(message, location);
    }

    function peg$literalExpectation(text, ignoreCase) {
      return { type: "literal", text: text, ignoreCase: ignoreCase };
    }

    function peg$classExpectation(parts, inverted, ignoreCase) {
      return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
    }

    function peg$anyExpectation() {
      return { type: "any" };
    }

    function peg$endExpectation() {
      return { type: "end" };
    }

    function peg$otherExpectation(description) {
      return { type: "other", description: description };
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos], p;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column
        };

        while (p < pos) {
          if (input.charCodeAt(p) === 10) {
            details.line++;
            details.column = 1;
          } else {
            details.column++;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildSimpleError(message, location) {
      return new peg$SyntaxError(message, null, null, location);
    }

    function peg$buildStructuredError(expected, found, location) {
      return new peg$SyntaxError(
        peg$SyntaxError.buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parseGIFTQuestions() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parseCategory();
      if (s2 === peg$FAILED) {
        s2 = peg$parseDescription();
        if (s2 === peg$FAILED) {
          s2 = peg$parseQuestion();
        }
      }
      if (s2 !== peg$FAILED) {
        while (s2 !== peg$FAILED) {
          s1.push(s2);
          s2 = peg$parseCategory();
          if (s2 === peg$FAILED) {
            s2 = peg$parseDescription();
            if (s2 === peg$FAILED) {
              s2 = peg$parseQuestion();
            }
          }
        }
      } else {
        s1 = peg$FAILED;
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          s3 = peg$parse__();
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c0(s1);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseCategory() {
      var s0, s1, s2, s3, s4, s5, s6;

      peg$silentFails++;
      s0 = peg$currPos;
      s1 = peg$parse__();
      if (s1 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 36) {
          s2 = peg$c2;
          peg$currPos++;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c3); }
        }
        if (s2 !== peg$FAILED) {
          if (input.substr(peg$currPos, 9) === peg$c4) {
            s3 = peg$c4;
            peg$currPos += 9;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c5); }
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parse_();
            if (s4 !== peg$FAILED) {
              s5 = peg$parseCategoryText();
              if (s5 !== peg$FAILED) {
                s6 = peg$parseQuestionSeparator();
                if (s6 !== peg$FAILED) {
                  peg$savedPos = s0;
                  s1 = peg$c6(s5);
                  s0 = s1;
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      peg$silentFails--;
      if (s0 === peg$FAILED) {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c1); }
      }

      return s0;
    }

    function peg$parseDescription() {
      var s0, s1, s2, s3, s4, s5;

      peg$silentFails++;
      s0 = peg$currPos;
      s1 = peg$parse__();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseQuestionTitle();
        if (s2 === peg$FAILED) {
          s2 = null;
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parse_();
          if (s3 !== peg$FAILED) {
            s4 = peg$parseQuestionStem();
            if (s4 !== peg$FAILED) {
              s5 = peg$parseQuestionSeparator();
              if (s5 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c8(s2, s4);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      peg$silentFails--;
      if (s0 === peg$FAILED) {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c7); }
      }

      return s0;
    }

    function peg$parseQuestion() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13;
